--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -160,9 +160,9 @@ a {
 
 
 .table {
-    width: 60%;
+    width: 80%;
     max-width: 70%;    
-    margin-left: 238px;
+    margin-left: 20%;
     margin-top: 30px;
 }
 table {
